# chompy-py

./: .gitignore  Dockerfile  README.md  pyproject.toml
chompy/: app.py  downloader.py
tests/: test_chompy.py
