[tool.poetry]
name = "chompy"
version = "0.1.0"
description = ""
authors = ["Hebo <hebo@salt.gg>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
uvicorn = {extras = ["standard"], version = "^0.12.3"}
youtube_dl = "^2020.11.29"
aiofiles = "^0.6.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
